# distributed_websockets

./: CMakeLists.txt  cpu_profile.sh
chat-client/: package.json
chat-client/src/: App.js  Login.js
lib/: CMakeLists.txt  linker_file.cpp
lib/json/: json.hpp
libwebsocket_server/: CMakeLists.txt  websocket_server.cpp  websocket_server.hpp  websocket_server_config.hpp
nginx/: install.md  install.sh  nginx.conf
performance_test/: app.js  config.json  package-lock.json  package.json
redis/: CMakeLists.txt  install.sh  redis_adapter.cpp  redis_adapter.hpp  remote_server.cpp  remote_server.hpp
test/: CMakeLists.txt
test/test_websocket_server/: CMakeLists.txt
websocket_server/: CMakeLists.txt  main.cpp  main.cpp.cpp  websocket_endpoints.cpp  websocket_endpoints.hpp
websocket_server/endpoints/: base_endpoint.hpp  list_users.hpp  login.hpp  register.hpp  send.hpp
